--- a/Source/DD.Youtube.HyperNotesPlus.Client/DD.Youtube.HyperNotesPlus.Client.csproj
+++ b/Source/DD.Youtube.HyperNotesPlus.Client/DD.Youtube.HyperNotesPlus.Client.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DD.Youtube.HyperNotesPlus.Domain.Common\DD.Youtube.HyperNotesPlus.Domain.Common.csproj" />
+    <ProjectReference Include="..\DD.Youtube.HyperNotesPlus.Domain\DD.Youtube.HyperNotesPlus.Domain.csproj" />
     <ProjectReference Include="..\DD.Youtube.HyperNotesPlus.Shared\DD.Youtube.HyperNotesPlus.Shared.csproj" />
   </ItemGroup>
 
