added new note component, added note.razor, managed navigations

--- a/Source/DD.Youtube.HyperNotesPlus.Server/DD.Youtube.HyperNotesPlus.Server.csproj
+++ b/Source/DD.Youtube.HyperNotesPlus.Server/DD.Youtube.HyperNotesPlus.Server.csproj
@@ -19,6 +19,7 @@
 
 
   <ItemGroup>
+    <Watch Include="..\**\*.csproj" />
     <Watch Include="..\**\*.razor" />
     <Watch Include="..\**\*.cs" Exclude="..\**\*.g.cs" />
     <Watch Include="..\**\*.css" />
